# blochsphere

./: .clang-format  .gitignore  CMakeLists.txt  README.md  blochsphere.pro  blochsphere.rc  readme.md  readme_rus.md
bloch2/: bloch.cpp  bloch.hpp  bloch.pro  main.cpp  mainwid.cpp  mainwid.hpp  qubitvect.cpp  qubitvect.hpp
icons/: logo_big.cdr  logo_small.cdr
src/: Circuit.cpp  Circuit.h  CircuitOperator.cpp  CircuitOperator.h  CircuitQubit.cpp  CircuitQubit.h  VectorWidget.cpp  VectorWidget.h  anginput.cpp  anginput.hpp  bloch.cpp  bloch.hpp  blochUtility.cpp  blochUtility.h  blochdialog.cpp  blochdialog.hpp  blochsphere.pro  main.cpp  mainwid.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  operator.cpp  operator.h  operator.hpp  opitem.cpp  opitem.hpp  point.cpp  point.h  point.hpp  qubit.cpp  qubit.h  qubit.hpp  qubitvect.cpp  scene.cpp  scene.hpp  sphere.cpp  sphere.h  sphere.hpp  unitaryMatrix2x2.cpp  (+6 more)
src/quantum/: Operator.cpp  Operator.h  Operator.hpp  Point.cpp  Point.h  Point.hpp  Qubit.cpp  Qubit.h  Qubit.hpp  UnitaryMatrix2x2.cpp  UnitaryMatrix2x2.h  UnitaryMatrix2x2.hpp  Vector.cpp  Vector.h  Vector.hpp
src/widgets/: BlochDialog.cpp  BlochDialog.h  Circuit.cpp  Circuit.h  CircuitOperator.cpp  CircuitOperator.h  CircuitQubit.cpp  CircuitQubit.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  OpItem.cpp  OpItem.h  OpItem.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  VectorWidget.cpp  VectorWidget.h
test/: identityOperatorPairs.cpp  identityOperatorPairs.h  main.cpp  qubits.cpp  qubits.h  testOperator.cpp  testOperatorDecompositions.cpp  testQubit.cpp  unitaryOperators.cpp  unitaryOperators.h  unitaryOperators.hpp
